---------------

- Add ``editable`` parameter to :meth:`atomx.Atomx.report`.
- Add ``dsp`` reporting scope.
- Add ``daterange`` parameter to :meth:`atomx.Atomx.report`.
- :meth:`atomx.models.AtomxModel.reload` takes kwargs parameter
- :meth:`atomx.Atomx.delete` can take a `atomx.models` instance as argument
- Add new models:

  * :class:`atomx.models.Dsp`
  * :class:`atomx.models.Ssp`
  * :class:`atomx.models.SspResultType`


1.6
---

- :meth:`atomx.Atomx.login` takes ``totp`` parameter for users that have 2-factor auth enabled.
- :meth:`atomx.Atomx.search` takes ``index`` parameter to only search specific models.
- Add support to remove models from the API. See :meth:`atomx.models.AtomxModel.delete`.
- Add :meth:`atomx.Atomx.remove`.
- Add ``save`` parameter to :meth:`atomx.Atomx.report`.
- Add new models:

  * :class:`atomx.models.App`
  * :class:`atomx.models.Appstore`
  * :class:`atomx.models.City`
  * :class:`atomx.models.Dma`
  * :class:`atomx.models.PriceModel`
  * :class:`atomx.models.Timezone`
  * :class:`atomx.models.Zipcode`


1.5
---

- :meth:`atomx.Atomx.report` takes ``name`` parameter to name reports
- remove ``network`` scope in :meth:`atomx.Atomx.report` and add
  ``network_managed``, ``network_buy``, ``network_sell``
- Add new models:

  * :class:`atomx.models.AccountManager` (alias for `User`)
  * :class:`atomx.models.CampaignDebugReason`
  * :class:`atomx.models.CreativeAttribute`
  * :class:`atomx.models.PlacementType`
  * :class:`atomx.models.Visibility`

- Add :meth:`atomx.models.Report.save` to edit ``name`` and ``emails``
  of a :class:`atomx.models.Report`
- :meth:`atomx.Atomx.get` also accepts a model class or instance as resource argument.
  E.g.: ``atomx_api.get(atomx.models.Advertiser)`` or ``atomx_api.get(atomx.models.Advertiser(42))``
- Add :mod:`pickle` support for :mod:`atomx.models`.
- Save HTTP headers in :attr:`atomx.Atomx.last_response`.
- Add history support. :meth:`atomx.models.AtomxModel.history`.
- Use api version 3::
